Add queue position to play track message